--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	compile('mysql:mysql-connector-java')
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
 	compile('org.hibernate:hibernate-java8')
-	
+	compile('org.mockito:mockito-core:2.23.4')
+	compile('com.google.code.gson:gson:2.8.2')
+	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4')
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
